--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "static/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "mysite/wsgi.py"
     }
