--- a/vercel.json
+++ b/vercel.json
@@ -3,12 +3,16 @@
     {
       "src": "mysite/wsgi.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "theme/static/styles.css",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "static/$1"
+      "dest": "theme/static/styles.css"
     },
     {
       "src": "/(.*)",
